package ucf.assignments;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Adan Rodriguez
 */

//import statements needed.

public class AddListController {
    //@FXML
    //Connecting all GUI attributes from fxml files regarding buttons, text fields and date picker to this App Controller class.

    /*Important function:
    private void addListHandler()
    {
    }
    */
}